# lilac

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  run-backend.sh
agent/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
agent/src/: client.rs  config.rs  errors.rs  lib.rs  main.rs
agent/src/config/: mod.rs
agent/src/inbound/: cli.rs  handlers.rs
agent/src/outbound/: control_plane.rs  docker.rs  mod.rs  system.rs  user_api.rs
backend/: .env.example  .gitignore  Cargo.toml  lilac.example.toml  lilac.toml
backend/.sqlx/: query-00b288fa6a8fe1d99adb6b82be8507f4c107e4c1ec00559c9851545104adb279.json  query-074f921a3ddf8e9be22ad11986a448349f0dc1cd030d39aae7043f4f606f4a21.json  query-07676f3b0db0ff76c11afbc55ca2d97def27040e8b49dd0504ba8e8a8e7c9c12.json  query-07853ecb50654f9189e2d7b7f6cf7f0be9b6c100b80a4f61e1d795f83ca39ab6.json  query-10f3c0eff25c4a3ec8e7f4d3814b43c5449a9aba097da2e841da197e5b9258d3.json  query-118e1ba4ca71353d9b8207e03de42a23a79afae633d873a889ae36a6c5a4c86f.json  query-11a2cb0a24820a5900c77dffc8e4ca1d41e310d19f3b96b3bd4a2a037ccfb57a.json  query-12701c68fdb650e168042df6969cf9c94d8b7e6118504bb511c021ff619afbc9.json  query-12dc7cbd5b221b00ffa86e9983064958e6bc4ccf178feb99ace5d67bfd3239ff.json  query-13145977044814207fbe54c64049b45cdaea20b9719617720812548127de5983.json  query-14ac2e5326ac9a12c56343edc77f527583dc3b859b4b3d391ef407dd8cce20ee.json  query-164eeb0acf5e9bbea97d7a6d20f61ec82b59b3fa7a7beb0720b1ec975e5af69b.json  query-16610462dd1590020614a065d855505cdfe1f24175cee21b96126003f5fc9cde.json  query-19013267cbe75fffb789ac6b7d763eb1e383ef13f4bc3307a298e551478bd933.json  query-191ea9c8b71b6ece1fbaf0c0c2c4f976297da1576ae88bcb4e0cb29f6eadc506.json  query-19bfd2362bcc41cef855d4bb1a3c69e831d996e6f1fe9def5071606255d8335c.json  query-1bbc56e26857dd77170889b3cc90d93cf9e84187c03cfd9707fa1e0c6f78e397.json  query-1cf8f1fc910ed1d13ceef25af02c141d511ef92c7f818dbf487d86f06c6591ed.json  query-2133bb0534e72b1f49d2ca63b8968b9af21a09c9d0c51168d944737b27ce0711.json  query-221e75bc25f9e41c29fe187a422fdc8bbba5559030ad8094099e9e05924224d7.json  query-2281e79c2dd5b5c8250d1ca1279352fd0d0dc59f117a703a2f0f695b837b937d.json  query-24e72f0533920b9a1708b5bed04e89da69f9dc460cf838fad67afee86aa99041.json  query-2624dafc7e74cc97727dce44e91539411127619b0b597d08fb25f8c5d48e2468.json  query-267155e2b43884247bf2cc48c1ee5234eee60facaebb1ed5a98abaf81b0bce3e.json  query-28badd1ab6bedbb7c66fec78ebe5b6dc89f9fdbc909320f48228544a8d04eeb9.json  query-2a42a70518ed09a61568149a3bc654103b612a7d9f6c367478f64f115af9d035.json  query-2a530b6f18a0aeee4e45b435e6d7a7fdfde8b5e51eac79acbd91fff7b3be4526.json  query-2d5bd6bd972d5ff1c22ea224241cae4605f9162cecc0551a6915a0eba2147e36.json  query-2ec0056d9cdd5483a80ef821d9069229346919804c39f4a51092b132f6a5cabf.json  query-30ef85fe420a1a219c7b258cda37eb26512b61240da88b6fed4690f8ecdb060e.json  query-32d41c7f0c12a88912cf4beba7c3220ee3cc60531c34ad12c3d05fc79bf0dcd9.json  query-339874d1f1968b5669f6924b4ad14e93f17df33feeb314bf5d6cebc2aefedc24.json  query-385034826d30b2fd66f906d67b67ab25bf1e9eb1273fb552f61e48c03c8c1832.json  query-3976e6a120898459726298c3c537447e811352e29d4b5f25b9132f4d21806e95.json  query-3d0a17c3f4da9073c6cf6b4d9679e365461a167ec24686f21fbead176b054e29.json  query-3eaf489fffaef822fe3d618dd801afc198eef37af2c93ffcaabf8648f834a966.json  query-4477170856e43fd950575fd422945fba8da5b3bbf161e7058e6db901b7784b02.json  query-454ccb67ede0481bc7e4ed6fe67133543e58ec139518c11c541587643099093a.json  query-47c2b3cbf7d85c5d236e54c9585bf6e01a538b59f9047288d600832e08c246b6.json  query-47c9f5af6f3c5f23081337c0e26c33409c01cf8f3ad737204fc11a4ac1602f8c.json  (+76 more)
backend/base-image/: Dockerfile
backend/common/: Cargo.toml
backend/common/.sqlx/: query-066f357e96e8eed24ac665c47c4d81958a53b3d25f48de4568209074dc23395e.json  query-0d50aed78502bcd27336e79bb971705bb3b6c624736c29ddac6d1b636145d8ee.json  query-12e184629619b6fde522b6ca05c6feabe2ada5caa6ad7889d692d156727dd021.json  query-1804f3073e53d11329d4e6b4bda7fa4f9bf1a6b6c098aca69b32bc8f09c93699.json  query-1933a2f321b49ce094131286de2c45338316e54f9a7731a45c4842dd619e0ac3.json  query-1bc6c294499b76997e4e3efaf09f62f47bd2ae888d56a13dc9289da123bf4655.json  (+37 more)
backend/common/migrations/: 20250330232329_create_users_table.sql  (+14 more)
backend/controlplane-api/: Cargo.toml
backend/data-pipeline/: Cargo.toml
backend/migrations/: 20250421011537_initial.down.sql  20250421011537_initial.up.sql  20250714143000_add_description_to_services.down.sql  20250714143000_add_description_to_services.up.sql  20250714143100_add_name_to_users.up.sql  20250714235300_add_owner_id_to_projects.down.sql  20250715212115_create_cluster_table.down.sql  20250715212115_create_cluster_table.up.sql  20250718155400_seed_clusters.down.sql  20250718155400_seed_clusters.up.sql  20250719024446_create_credentials_table.down.sql  20250719024446_create_credentials_table.up.sql  20250719062342_add_clusters_credential_id.down.sql  20250719062342_add_clusters_credential_id.up.sql  20250720051406_create_workspaces_table.sql  20250721182125_add_gpu_to_workspaces.down.sql  20250721182125_add_gpu_to_workspaces.up.sql  20250725063243_create_training_jobs_table.down.sql  20250725063243_create_training_jobs_table.up.sql  20250726192100_scheduler_schema_changes.down.sql  20250726192100_scheduler_schema_changes.up.sql  20250727050353_add_scheduled_cluster_id_to_jobs.up.sql  20250728000946_create_queues_and_assignments.down.sql  20250728000946_create_queues_and_assignments.up.sql  20250729062650_create_api_keys_table.down.sql  20250729062650_create_api_keys_table.up.sql  20250730200600_add_assigned_job_id_to_nodes.down.sql  20250730200600_add_assigned_job_id_to_nodes.up.sql  20250730210448_add_api_key_owner_constraint.down.sql  20250730210448_add_api_key_owner_constraint.up.sql  20250801223400_add_cancelled_to_job_status.up.sql  20250801230300_modify_job_queue_relation.up.sql  20250801230400_add_cascade_delete_to_queue_assignments.up.sql  20250801231200_fix_job_queue_relation_definitively.up.sql
backend/server/: Cargo.toml
backend/src/: config.rs
(+906 files in other folders)
