[package]
name = "lilac"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.9"
dirs = "6.0"
rand = "0.9.2"
rand_distr = "0.5.0"
tempfile = "3"
dialoguer = "0.11"
fs_extra = "1.3"
indicatif = "0.17"
sysinfo = "0.30"
bollard = "0.16"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
nvml-wrapper = "0.11"
futures-util = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
thiserror = "1.0"
log = "0.4"

[[bin]]
name = "lilac"
path = "src/bin/lilac/main.rs"