[workspace]
resolver = "2"
members = [ "common", "controlplane-api","data-pipeline"]


[workspace.dependencies]
common = { path = "./common" }
data-pipeline = { path = "./data-pipeline" }
argon2 = "0.5"
aws-lc-rs = "1"
axum = "0.8"
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonwebtoken = "9.3.1"
nanoid = "0.4.0"
once_cell = "1.21.3"
password-auth = "1.0.0"
rand = { version = "0.9.0", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27.1", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "derive", "chrono" ] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }