[workspace]
resolver = "2"
members = [ "common", "controlplane-api"]


[workspace.dependencies]
common = { path = "./common" }
argon2 = "0.5"
aws-lc-rs = "1"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.85"
aws-sdk-sts = "1.72"
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
base64 = "0.22.1"
cached = { version = "0.55.1", features = ["async"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
getset = "0.1.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
jsonschema = "0.29"
jsonwebtoken = "9.3.1"
nanoid = "0.4.0"
once_cell = "1.21.3"
password-auth = "1.0.0"
rand = { version = "0.9.0", features = ["serde"] }
regex = "1.11.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
strum = { version = "0.27.1", features = ["derive"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "derive", "chrono" ] }
thiserror = "2.0.12"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
rustls = { version = "0.23.27", features = ["ring"] }