[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
aws-lc-rs = "1.13.1"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie-private"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
cached = { version = "0.55.1", features = ["proc_macro"] }
chrono = { version = "0.4.41", features = ["serde"]}
config = "0.15.11"
headers = "0.4"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = { version = "0.1.13", features = ["full"] }
jsonwebtoken = "9.3.1"
nanoid = "0.4.0"
once_cell = "1.21.3"
password-auth = "1.0.0"
pem = "3.0.5"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "multipart", "rustls-tls"], default-features = false }
rmp-serde = "1.3.0"
rustls = { version = "0.23.27", features = ["ring"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit", "validate-request", "request-id"] }
tower-sessions = { version = "0.14.0", features = ["private"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.7.0"
mockall = "0.12.1"
test-log = { version = "0.2.17", features = ["trace"] }
snowflake-api = "0.12.0"
time = "0.3.41"
futures = "0.3.31"
axum-debug = "0.3.3"
axum-macros = "0.5.0"
tokio-test = "0.4.4"
