[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-types-convert.workspace = true
axum.workspace = true
chrono.workspace = true
jsonschema.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
password-auth.workspace = true
uuid.workspace = true