[package]
name = "controlplane-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controlplane-api"

[dependencies]
common.workspace = true
argon2.workspace = true
aws-lc-rs.workspace = true
axum-extra.workspace = true
axum.workspace = true
chrono.workspace = true
dotenv.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
jsonschema.workspace = true
nanoid.workspace = true
once_cell.workspace = true
password-auth.workspace = true
rand.workspace = true
secrecy.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
validator = { version = "0.19", features = ["derive"] }