[package]
name = "controlplane-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controlplane-api"

[dependencies]
anyhow = "1.0.98"
openidconnect = { version = "4.0.0", features = ["reqwest"] }
url = "2.5.2"
argon2.workspace = true
aws-lc-rs.workspace = true
aws-smithy-types-convert.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts.workspace = true
axum-extra.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
common.workspace = true
data-url = "0.3.1"
dotenv.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
image = "0.25"
jsonschema.workspace = true
jsonwebtoken.workspace = true
nanoid.workspace = true
once_cell.workspace = true
password-auth.workspace = true
rand.workspace = true
secrecy.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
validator = { version = "0.19", features = ["derive"] }
