[package]
name = "controlplane-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controlplane-api"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-lc-rs = "1"
aws-sdk-s3 = "1.85"
aws-sdk-sts = "1.72"
aws-smithy-types-convert = { version = "0.60", features = ["convert-chrono"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
cached = { version = "0.55.1", features = ["async"] }
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
data-url = "0.3.1"
dotenv = "0.15.0"
getset = "0.1.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
image = "0.25"
jsonschema = "0.29"
jsonwebtoken = "9.3.1"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
nanoid = "0.4.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
once_cell = "1.21.3"
openidconnect = { version = "4.0.0", features = ["reqwest"] }
password-auth = "1.0.0"
rand = { version = "0.9.0", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["gzip", "json", "rustls-tls"] }
rustls = { version = "0.23.27", features = ["ring"] }
schemars = "0.8.21"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "derive", "chrono" ] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5.2"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
mockito = "1.7.0"
