[package]
name = "data-pipeline"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
async-trait = "0.1"
img_hash = "3.2" 
thiserror = "1.0"
rayon = "1.10.0"

