[package]
name = "data-pipeline"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
common.workspace = true
dotenv.workspace = true
async-trait = "0.1"
futures = "0.3.31"
image = "0.25"
imageproc = "0.25.0"
img_hash = "3.2" 
jsonschema.workspace = true
rayon = "1.10.0"
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

