[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-lc-rs = "1.13.1"
aws-sdk-s3 = "1.90.0"
aws-sdk-sts = "1.72.0"
aws-smithy-types-convert = { version = "0.60.9", features = ["convert-chrono"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie-private"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
headers = "0.4"
cached = { version = "0.55.1", features = ["proc_macro"] }
chrono = "0.4.41"
config = "0.15.11"
data-url = "0.3.1"
dotenv = "0.15.0"
getset = "0.1.5"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["full"] }
image = "0.25.6"
jsonschema = "0.29.1"
jsonwebtoken = "9.3.1"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
mockito = "1.7.0"
nanoid = "0.4.0"
once_cell = "1.21.3"
password-auth = "1.0.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "multipart", "rustls-tls"], default-features = false }
rustls = { version = "0.23.27", features = ["ring"] }
schemars = { version = "0.8.22", features = ["chrono", "url", "uuid1"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time", "uuid", "json"] }
strum = { version = "0.27.1", features = ["derive"] }
test-log = "0.2.17"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit", "validate-request"] }
tower-sessions = { version = "0.14.0", features = ["private"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }
snowflake-api = "0.12.0"
